--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,11 +2,10 @@ plugins {
     id 'com.android.application'
     id 'com.xiaojinzi.component.plugin'
     id 'kotlin-android'
+    //id 'com.byteace.refercheck'
 }
 
 android {
-    compileSdkVersion 30
-    buildToolsVersion "30.0.3"
 
     buildFeatures {
         //dataBinding = true
@@ -14,10 +13,13 @@ android {
         viewBinding = true
     }
 
+    compileSdkVersion 31
+    buildToolsVersion "31.0.0"
+
     defaultConfig {
         applicationId "com.ok.demo.okcore"
         minSdkVersion 21
-        targetSdkVersion 30
+        targetSdkVersion 31
         versionCode 1
         versionName "1.0"
 
@@ -50,19 +52,27 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
+//    compileOptions {
+//        sourceCompatibility JavaVersion.VERSION_1_8
+//        targetCompatibility JavaVersion.VERSION_1_8
+//    }
 }
+
+// 代码检查
+//referCheckConfig {
+//    enable true //是否打开引用检查功能
+//    strictMode true // 控制是否发现问题时停止构建，
+//    check "com.abc.def" //需要检查的类的包名，因为工程中会使用很多sdk或者第三方库我们一般不做检查，只检查我们需要关注的类的包名
+//    notWarn "org.apache.http,com.core.videocompressor.VideoController" //人工检查确认后不需要报错的包名
+//}
 
 dependencies {
 
-    implementation 'androidx.appcompat:appcompat:1.3.1'
+    implementation 'androidx.appcompat:appcompat:1.4.0'
     implementation 'com.google.android.material:material:1.4.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
     implementation project(path: ':common')
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:${kotlin_version}"
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
@@ -70,7 +80,7 @@ dependencies {
     // 内存泄漏检测
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.7'
 
-    annotationProcessor "com.github.xiaojinzi123.Component:component-compiler:v1.9.2-androidx-java8"
+    annotationProcessor "com.github.xiaojinzi123.Component:component-compiler:${router_version}"
 
     implementation project(path: ':module1')
 }
