--- a/build.gradle
+++ b/build.gradle
@@ -1,19 +1,23 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
+
     ext {
-        kotlin_version = '1.4.32'
+        kotlin_version = '1.6.0'
+        router_version = 'v1.9.2-androidx-java8'
     }
+
     repositories {
         google()
         jcenter()
         maven { url 'https://jitpack.io' }
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.1.3"
-        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.4.32'
+        classpath 'com.android.tools.build:gradle:7.0.4'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${kotlin_version}"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
-        classpath "com.github.xiaojinzi123.Component:component-plugin:v1.9.2-androidx-java8"
+        classpath "com.github.xiaojinzi123.Component:component-plugin:${router_version}"
+        //classpath "com.byteace.refercheck:byteace-refercheck:35-SNAPSHOT" // 字节码检查是否有错误引用调用等
 
     }
 }
