--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,14 @@
 plugins {
     id 'com.android.application'
-    id 'com.xiaojinzi.component.plugin'
     id 'kotlin-android'
-    //id 'com.byteace.refercheck'
+    id 'kotlin-kapt'
+    id 'com.xiaojinzi.component.plugin'
 }
 
 android {
 
     buildFeatures {
-        //dataBinding = true
-        // for view binding :
+        dataBinding = true
         viewBinding = true
     }
 
@@ -52,10 +51,6 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-//    compileOptions {
-//        sourceCompatibility JavaVersion.VERSION_1_8
-//        targetCompatibility JavaVersion.VERSION_1_8
-//    }
 }
 
 // 代码检查
@@ -67,18 +62,19 @@ android {
 //}
 
 dependencies {
-
-    implementation 'androidx.appcompat:appcompat:1.4.0'
-    implementation 'com.google.android.material:material:1.4.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
-    implementation project(path: ':common')
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:${kotlin_version}"
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    implementation 'androidx.appcompat:appcompat:1.4.1'
+    implementation 'com.google.android.material:material:1.5.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+    implementation project(path: ':common')
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:${kotlin_version}"
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+
     // 内存泄漏检测
-    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.7'
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.8.1'
 
     annotationProcessor "com.github.xiaojinzi123.Component:component-compiler:${router_version}"
 
