--- a/common/build.gradle
+++ b/common/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'com.android.library'
+    id 'dagger.hilt.android.plugin'
 }
 
 android {
@@ -43,36 +44,54 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     api 'androidx.legacy:legacy-support-v4:1.0.0'
-    api 'androidx.appcompat:appcompat:1.4.0'
+    api 'androidx.appcompat:appcompat:1.4.1'
     api 'androidx.multidex:multidex:2.0.1'
-    api 'androidx.constraintlayout:constraintlayout:2.1.2'
-    api 'com.google.android.material:material:1.4.0'
-    api 'androidx.recyclerview:recyclerview:1.2.1'
+    api 'androidx.constraintlayout:constraintlayout:2.1.3'
+    api 'com.google.android.material:material:1.5.0'
     api 'androidx.viewpager2:viewpager2:1.1.0-beta01'
     api 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
     api "androidx.work:work-runtime:2.7.1"          // 性能最好的后台任务队列处理
     api "android.arch.work:work-rxjava2:1.0.1"      // rxjava 版本
-    api 'com.google.code.gson:gson:2.8.8'           // json
-    api(name: 'oaid_sdk_1.0.25', ext: 'aar')        // 设备唯一id 需要在 asset目录添加 supplierconfig.json
-    api(name: 'okutils-release', ext: 'aar')
+    api 'com.google.code.gson:gson:2.8.9'           // json
 
-    // room
-    api "androidx.room:room-runtime:2.4.0"
-    annotationProcessor "androidx.room:room-compiler:2.4.0"
+    // recyclerview
+    api 'androidx.recyclerview:recyclerview:1.2.1'
+    api "androidx.recyclerview:recyclerview-selection:1.1.0" //用于控制触摸和鼠标驱动选择的项目选择
+    api "androidx.paging:paging-runtime:3.1.1"
+    api "androidx.paging:paging-rxjava2:3.1.1"
+    testImplementation "androidx.paging:paging-common:3.1.1"
+
+    // room 数据库
+    api "androidx.room:room-runtime:2.4.2"
+    annotationProcessor "androidx.room:room-compiler:2.4.2"
     // optional - RxJava support for Room
-    api "androidx.room:room-rxjava2:2.4.0"
+    api "androidx.room:room-rxjava2:2.4.2"
+    api "androidx.room:room-paging:2.5.0-alpha01"
     // optional - Test helpers
-    testImplementation "androidx.room:room-testing:2.4.0"
+    testImplementation "androidx.room:room-testing:2.4.2"
 
-    // datastore
+    // datastore 缓存
     api "androidx.datastore:datastore-preferences:1.0.0"
     api "androidx.datastore:datastore-preferences-rxjava2:1.0.0"
     api "androidx.datastore:datastore-preferences-core:1.0.0"
     api "androidx.datastore:datastore-core:1.0.0"
 
+    // 依赖注入
+    api 'com.google.dagger:hilt-android:2.41'
+    annotationProcessor 'com.google.dagger:hilt-compiler:2.41'
+
+    // 设备唯一id 需要在 asset目录添加 supplierconfig.json
+    api(name: 'oaid_sdk_1.0.25', ext: 'aar')
+
+    // 工具
+    api(name: 'okutils-release', ext: 'aar')
+
+    // 自动填充
+    api "androidx.autofill:autofill:1.1.0"
+
     // ohttp
-    api 'com.squareup.okhttp3:okhttp:4.9.0'
-    api 'com.squareup.okhttp3:logging-interceptor:4.9.0'
+    api 'com.squareup.okhttp3:okhttp:4.9.3'
+    api 'com.squareup.okhttp3:logging-interceptor:4.9.3'
 
     // rx系列
     api 'io.reactivex.rxjava2:rxandroid:2.1.1'
@@ -90,11 +109,6 @@ dependencies {
     // 权限处理
     api "com.github.permissions-dispatcher:permissionsdispatcher:4.9.1"
     annotationProcessor "com.github.permissions-dispatcher:permissionsdispatcher-processor:4.9.1"
-
-    // 下载器
-    api 'com.liulishuo.okdownload:okdownload:1.0.7'
-    api 'com.liulishuo.okdownload:okhttp:1.0.7'
-    api 'com.liulishuo.okdownload:sqlite:1.0.7'  //存储断点信息的数据库
 
     // glide
     api 'com.github.bumptech.glide:glide:4.12.0'
@@ -116,6 +130,10 @@ dependencies {
     // 路由
     api "com.github.xiaojinzi123.Component:component-impl:${router_version}"
     api "com.github.xiaojinzi123.Component:component-impl-rx:${router_version}"
-    //annotationProcessor "com.github.xiaojinzi123.Component:component-compiler:v1.9.2-androidx-java8"
+    //annotationProcessor "com.github.xiaojinzi123.Component:component-compiler:${router_version}"
 
+    // 下载器
+    api 'com.liulishuo.okdownload:okdownload:1.0.7'
+    api 'com.liulishuo.okdownload:okhttp:1.0.7'
+    api 'com.liulishuo.okdownload:sqlite:1.0.7'  //存储断点信息的数据库
 }
